tests/od2trips/errors/incomplete_districts/both_missing1of2/errors.od2trips
Warning: Missing origin '3' and destination '4' (24.00 vehicles).
